--- a/boards/shields/maizeless/maizeless.dtsi
+++ b/boards/shields/maizeless/maizeless.dtsi
@@ -65,4 +65,5 @@ RC(0,12) RC(0,13) RC(0,14) RC(0,15) RC(0,16) RC(0,17)  RC(1,17) RC(1,16) RC(1,15
                 , <&gpio1  7 (GPIO_ACTIVE_LOW | GPIO_PULL_UP)> // SW21
                 ;
         };
+    pinctrl-names = "default", "sleep";
 };
