--- a/maizeless.conf
+++ b/maizeless.conf
@@ -2,3 +2,4 @@ CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 CONFIG_ZMK_BLE_EXPERIMENTAL_FEATURES=y
 CONFIG_BT_MAX_CONN=10
 CONFIG_BT_MAX_PAIRED=10
+CONFIG_ZMK_EXT_POWER=n
