Move config to ./config

--- a/.github/workflows/draw-keymaps.yml
+++ b/.github/workflows/draw-keymaps.yml
@@ -3,7 +3,7 @@ on:
   workflow_dispatch:  # can be triggered manually
   push:               # automatically run on changes to following paths
     paths:
-      - "*.keymap"
+      - "config/*.keymap"
       - "boards/shields/maizeless/*.dtsi"
       - "keymap_drawer.config.yaml"
 
@@ -21,7 +21,7 @@ jobs:
     permissions:
       contents: write  # allow workflow to commit to the repo
     with:
-      keymap_patterns: "*.keymap"        # path to the keymaps to parse
+      keymap_patterns: "config/*.keymap"        # path to the keymaps to parse
       config_path: "keymap_drawer.yaml"  # config file, ignored if not exists
       output_folder: "keymap-drawer"            # path to save produced SVG and keymap YAML files
       # parse_args: ""  # map of extra args to pass to `keymap parse`, e.g. "corne:'-l Def Lwr Rse' cradio:''"
