--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,12 @@
-on: [push, pull_request, workflow_dispatch]
+name: Build firmware
+on:
+  workflow_dispatch:  # can be triggered manually
+  pull_request:
+  push:               # automatically run on changes to following paths
+    paths:
+      - "config/*"
+      - ".github/workflows/build.yml"
+
 
 jobs:
   build:
