--- a/.github/workflows/draw-keymaps.yml
+++ b/.github/workflows/draw-keymaps.yml
@@ -4,25 +4,37 @@ on:
   push:               # automatically run on changes to following paths
     paths:
       - "config/*.keymap"
-      - "boards/shields/maizeless/*.dtsi"
-      - "keymap_drawer.config.yaml"
+      - "config/boards/shields/maizeless/*.dtsi"
+      - ".github/workflows/draw-keymaps.yml"
 
 jobs:
-  prepare:
+
+  draw:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+    - uses: actions/checkout@v4
+    - uses: actions/setup-python@v5
+      with:
+        python-version: '3.10'
+    - name: Install keymap_drawer
+      run: python -m pip install keymap-drawer
+    - name: Make keymap_drawer.yaml
+      run: make draw
+    - name: Artifact upload
+      id: artifact-upload-step
+      uses: actions/upload-artifact@v4
+      with:
+        name: drawing svg
+        path: maizeless_keymap.mine.pdf.svg
 
-      - name: Make keymap_drawer.yaml
-        run: make keymap_drawer.yaml
-  draw:
-    uses: caksoylar/keymap-drawer/.github/workflows/draw-zmk.yml@main
-    permissions:
-      contents: write  # allow workflow to commit to the repo
-    with:
-      keymap_patterns: "config/*.keymap"        # path to the keymaps to parse
-      config_path: "keymap_drawer.yaml"  # config file, ignored if not exists
-      output_folder: "keymap-drawer"            # path to save produced SVG and keymap YAML files
-      # parse_args: ""  # map of extra args to pass to `keymap parse`, e.g. "corne:'-l Def Lwr Rse' cradio:''"
-      # draw_args: ""   # map of extra args to pass to `keymap draw`, e.g. "corne:'-k corne_rotated' cradio:'-k paroxysm'"
+
+  # draw:
+  #   uses: caksoylar/keymap-drawer/.github/workflows/draw-zmk.yml@main
+  #   permissions:
+  #     contents: read
+  #   with:
+  #     destination: "artifact"
+  #     keymap_patterns: "config/*.keymap"
+  #     config_path: "keymap_drawer.yaml"
+  #     draw_args: "maizeless:'--qmk-keyboard corne_rotated'"
+  #     fail_on_error: true
