--- a/config/boards/shields/maizeless/maizeless.dtsi
+++ b/config/boards/shields/maizeless/maizeless.dtsi
@@ -10,6 +10,7 @@
     chosen {
         zmk,kscan = &kscan0;
         zmk,matrix-transform = &default_transform;
+        zmk,backlight = &backlight;
     };
 
     default_transform: keymap_transform_0 {
@@ -34,7 +35,6 @@ RC(0,12) RC(0,13) RC(0,14) RC(0,15) RC(0,16) RC(0,17)  RC(1,17) RC(1,16) RC(1,15
         >;
     };
 
-        
     kscan0: kscan {
             compatible = "zmk,kscan-gpio-direct";
             wakeup-source;
@@ -64,6 +64,75 @@ RC(0,12) RC(0,13) RC(0,14) RC(0,15) RC(0,16) RC(0,17)  RC(1,17) RC(1,16) RC(1,15
                 , <&gpio1  2 (GPIO_ACTIVE_LOW | GPIO_PULL_UP)> // SW20
                 , <&gpio1  7 (GPIO_ACTIVE_LOW | GPIO_PULL_UP)> // SW21
                 ;
+
+        leds {
+            compatible = "gpio-leds";
+            indicator_led: led_0 {
+                gpios = <&gpio0 15 GPIO_ACTIVE_HIGH>;
+                label = "Red LED";
+            };
         };
+
+    };
+
+//     pinctrl {
+//         pwm0_default: pwm0_default {
+//             group1 {
+//                 psels = <NRF_PSEL(PWM_OUT0, 0, 15)>;
+//             };
+//         };
+//         pwm0_sleep: pwm0_sleep {
+//             group1 {
+//                 psels = <NRF_PSEL(PWM_OUT0, 0, 15)>;
+//                 low-power-enable;
+//             };
+//         };
+//     };
+//
+//     pwm0 {
+//         status = "okay";
+//         pinctrl-0 = <&pwm0_default>;
+//         pinctrl-1 = <&pwm0_sleep>;
+//         pinctrl-names = "default", "sleep";
+//     };
+//
+
+    leds {
+        compatible = "gpio-leds";
+        led_0: led_0 {
+            gpios = <&gpio0 15 GPIO_ACTIVE_LOW>;
+            label = "User LED";
+        };
+    };
+
+    // supermini disables vcc pin with p0.13 set low. May as well, may save battery drain.
+    // power-gpio = <&gpio0 13 (GPIO_ACTIVE_HIGH | GPIO_OUTPUT_INACTIVE)>;
+    backlight: pwmleds {
+        compatible = "pwm-leds";
+        pwm_led_0 {
+            pwms = <&pwm0 15 PWM_MSEC(10) PWM_POLARITY_NORMAL>;
+        };
+    };
+};
+
+&pinctrl {
+    // LED config
+    pwm0_default: pwm0_default {
+        group1 {
+            psels = <NRF_PSEL(PWM_OUT0, 1, 15)>;
+        };
+    };
+    pwm0_sleep: pwm0_sleep {
+        group1 {
+            psels = <NRF_PSEL(PWM_OUT0, 1, 15)>;
+        };
+    };
+};
+
+&pwm0 {
+    status = "okay";
+    pinctrl-0 = <&pwm0_default>;
+    pinctrl-1 = <&pwm0_sleep>;
     pinctrl-names = "default", "sleep";
 };
+
